Closed Bug 1597431 Opened 6 years ago Closed 6 years ago

Fix uses of nsFrameLoader::MaybeUpdatePrimaryBrowserParent in dom/base/nsFrameLoader.cpp

Categories

(Core :: DOM: Navigation, defect, P3)

defect

Tracking

()

RESOLVED FIXED
mozilla74
Fission Milestone M6
Tracking Status
firefox74 --- fixed

People

(Reporter: djvj, Assigned: tetsuharu)

References

(Blocks 1 open bug)

Details

(Whiteboard: [rm-docshell-tree-item:simple])

Attachments

(1 file)

In file dom/base/nsFrameLoader.cpp

Check type against DocShellTreeItem type.

Change to check against BrowsingContext type.

Kannan says replacing nsIDocShellTreeItem calls should block enabling Fission in Nightly (M6).

Fission Milestone: --- → M6
Priority: -- → P3
Assignee: nobody → tetsuharu.ohzeki
Status: NEW → ASSIGNED
Attachment #9118715 - Attachment description: Bug 1597431 - Fix uses of nsFrameLoader::MaybeUpdatePrimaryBrowserParent in dom/base/nsFrameLoader.cpp. → Bug 1597431 - Fix uses of nsIDocShellTreeItem in nsFrameLoader::MaybeUpdatePrimaryBrowserParent in dom/base/nsFrameLoader.cpp.
Pushed by tetsuharu.ohzeki@gmail.com: https://hg.mozilla.org/integration/autoland/rev/be5c2e0781e8 Fix uses of nsIDocShellTreeItem in nsFrameLoader::MaybeUpdatePrimaryBrowserParent in dom/base/nsFrameLoader.cpp. r=kmag
Status: ASSIGNED → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla74
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: