Bug 1597431 - Fix uses of nsIDocShellTreeItem in nsFrameLoader::MaybeUpdatePrimaryBrowserParent in dom/base/nsFrameLoader.cpp. r=kmag

Differential Revision: https://phabricator.services.mozilla.com/D58718